# mesh-quality-metrics-from-verdict

./: .gitignore  README.md
data/: ugrid.vtk  ugrid2.vtk
docs/: adding_a_new_metric  todo.xlsx  vtkm_overview
test/: CMakeCache.txt  CMakeLists.txt  Makefile  aspect_ratio.cxx  cmake_install.cmake  create_grid.cxx  metric_test.cxx  volume.cxx
